# tradetaoli

./: .gitignore  BACKPACK_INTEGRATION.md  README.md  SPREAD_MONITOR_README.md  THREE_WAY_ARBITRAGE_GUIDE.md  analyze.py  backpack_api_demo.py  install_backpack_deps.sh  mark.py  pyproject.toml  start_monitor.sh  test_backpack_standalone.py
src/: __init__.py  main.py
src/commands/: __init__.py  account.py  arbitrage.py  auth.py  config.py  monitor.py  stats.py  stats_backup.py  system.py  trading.py
src/core/: __init__.py  api_client.py  arbitrage_engine.py  backpack_adapter.py  config.py  exceptions.py  exchange_adapters.py  exchange_factory.py  unified_arbitrage_strategy.py
src/models/: responses.py
