[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gooddex-cli"
version = "1.0.0"
description = "GoodDEX Command Line Interface - 专业的双交易所对冲交易终端工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GoodDEX Team", email = "team@gooddex.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "websockets>=11.0.0",
    "asyncio-mqtt>=0.13.0",
    "toml>=0.10.2",
    "ccxt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gooddex/gooddex-cli"
Repository = "https://github.com/gooddex/gooddex-cli"
Documentation = "https://docs.gooddex.com/cli"
"Bug Tracker" = "https://github.com/gooddex/gooddex-cli/issues"

[project.scripts]
gooddex = "src.main:cli"
gdx = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true